intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
* {
  margin: 0;
  padding: 0;
}

.container {
  text-align: center;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
}

.header {
  background-color: #393f4d;
}

.nav ul,
.menu ul {
  font-size: 16px;
  list-style-type: none;
}

.sidebar {
  background-color: #C50208;
}

.sidebar .photo {
  background-color: white;
  color: black;
  font-size: 12px;
  font-weight: normal;
  border-radius: 10px;
}


.sidebar .side-content {
  background-color: white;
  color: black;
  font-size: 16px;
  font-weight: normal;
}

.nav {
  background-color: #C50208;
}

.nav ul li {
  text-transform: uppercase;
}

.article {
  background-color: #bccbde;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.article .card {
  background-color: #FFFFFF;
  color: black;
  text-align: center;
}

.card p {
  color: black;
  font-weight: normal;
  font-size: 14px;
}

.card .title {
  font-size: 18px;
  text-align: center;
}

.footer {
  background-color: #393f4d;
}

.footer p {
  font-size: 13px;
  font-weight: normal;
}

/* My Solution */
.container {
	display: grid;
	grid-template-columns: 1fr 4fr;
	grid-template-rows: 2fr 1fr 10fr 1fr;
	gap: 4px;
}

.header {
	grid-column: 1 / -1;
	display: grid;
	grid-template-columns: 1fr 3fr;
	justify-items: end;
}

.header > .logo {
	justify-self: start;
}

.menu > ul {
	height: 100%;
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	justify-items: space-between;
	align-items: center;
	gap: 100px;
}

.nav > ul {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
}

.sidebar {
	display: grid;
	gap: 50px;
	grid-template-rows: repeat(4, 1fr);
	grid-row: 2 / -2;
}

.article {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	/* grid-template-rows: repeat(auto-fill, 200px); */
	gap: 15px;
}

.article > .card {
	height: 200px;
}

.nav, .article {
	grid-column: 2;
}

.footer {
	grid-column: 1 / -1;
}

